# CapDB

./: .clangd  .gitignore  BINDINGS_BUILD.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  LANGUAGE_DRIVERS.md  LICENSE  LICENSE.md  Makefile  PERF.md  README.md  SECURITY.md  capdb-go-build-env.sh  capdb-python-build-env.sh  capdb-rust-build-env.sh  feature-matrix.md  libcapdb_client.pc.in  manifest
.github/workflows/: ci.yml  release.yml
bindings/go/: Makefile  go.mod
bindings/python/: setup.py
bindings/rust/: Cargo.toml  build.rs
bindings/rust/src/: lib.rs
capdb/: README.md  __init__.py  capdb_io.c  capdb_io.h  capdb_network.h
capdb/client/: capdb_client.c  capdb_client.h
capdb/cluster/: capdb_cluster.c  capdb_cluster.h
capdb/jni/: capdb_jni.c
capdb/pool/: README.md  capdb_pool.c  capdb_pool.h
capdb/proto/: capdb_proto.c  capdb_proto.h
capdb/replication/: README.md  capdb_rep.h  capdb_rep_io.c  capdb_rep_io.h  capdb_rep_primary.c  capdb_rep_recovery.c  capdb_rep_recovery.h  capdb_rep_replica.c
capdb/server/: capdb_auth.c  capdb_server.c  capdb_server.h
capdb/shell/: capdb_shell.c  capdb_shell.h
capdb/store/: README.md  capdb_store.c  capdb_store.h  capdb_store_format.h  capdb_store_vfs.c
capdb/tls/: capdb_tls.c  capdb_tls.h
capdb/vfs/: capdb_vfs.c
compat/: sqlite3_capdb.h
core/: alter.c  analyze.c  attach.c  auth.c  backup.c  bitvec.c  btmutex.c  btree.c  btree.h  btreeInt.h  build.c  callback.c  capdb.h.in  capdbInt.h  capdbLimit.h  capdb_cfg.h  capdbext.h  carray.c  complete.c  date.c  dbpage.c  dbstat.c  delete.c  expr.c  fault.c  fkey.c  func.c  global.c  hash.c  hash.h  hwtime.h  insert.c  json.c  legacy.c  loadext.c  main.c  malloc.c  mem0.c  mem1.c  mem2.c  (+79 more)
core/test_support/: tclcapdb.c  test_autoext.c  test_backup.c  test_bestindex.c  test_blob.c  test_btree.c  test_config.c  test_delete.c  test_demovfs.c  test_devsym.c  test_fs.c  test_func.c  test_hexio.c  test_init.c  test_intarray.c  test_journal.c  test_loadext.c  test_malloc.c  test_md5.c  test_multiplex.c  test_mutex.c  test_onefile.c  test_osinst.c  test_pcache.c  test_quota.c  test_rtree.c  test_schema.c  test_sqllog.c  test_superlock.c  test_syscall.c  test_tclsh.c  test_tclvar.c  test_thread.c  test_vdbecov.c  test_vfs.c  test_window.c  test_wsd.c
docs/: BUILD.md  CAPDB.md  DRIVERS_GUIDE.md  LAYOUT.md  OPERATIONS.md  README.md  REBRAND.md  RELEASING.md  UPSTREAM_SYNC.md
docs/adr/: 001-storage-engine.md
docs/upstream/: COMPATIBILITY.md  README-LEGACY.md  compile-for-unix.md  compile-for-windows.md  json-enhancements.md  tcl-extension-testing.md  testrunner.md  trusted-schema.md  vdbesort-memory.md  vfs-shm.txt  wal-lock.md
extensions/: README.md
extensions/expert/: README.md  capdbexpert.c  capdbexpert.h  expert.c  test_expert.c
extensions/fts3/: README.content  README.syntax  README.tokenizers  fts3.c  fts3.h  fts3Int.h  fts3_aux.c  fts3_expr.c  fts3_hash.c  fts3_hash.h  fts3_icu.c  fts3_porter.c  fts3_snippet.c  fts3_term.c  fts3_test.c  fts3_tokenize_vtab.c  fts3_tokenizer.c  fts3_tokenizer.h  fts3_tokenizer1.c  fts3_unicode.c  fts3_unicode2.c  fts3_write.c
extensions/fts5/: fts5.h  fts5Int.h  fts5_aux.c  fts5_buffer.c  fts5_config.c  fts5_expr.c  fts5_hash.c  fts5_index.c  fts5_main.c  fts5_storage.c  fts5_tcl.c  fts5_test_mi.c  fts5_test_tok.c  fts5_tokenize.c  fts5_unicode2.c  fts5_varint.c  fts5_vocab.c  fts5parse.c  fts5parse.y
extensions/icu/: README.txt  icu.c  sqliteicu.h
extensions/intck/: capdbintck.c  capdbintck.h
extensions/jni/: GNUmakefile  README.md  jar-dist.make
extensions/misc/: amatch.c  anycollseq.c  appendvfs.c  base64.c  base85.c  basexx.c  blobio.c  btreeinfo.c  capdb_stdio.c  capdb_stdio.h  cksumvfs.c  closure.c  completion.c  compress.c  csv.c  dbdump.c  decimal.c  diskused.c  eval.c  explain.c  fileio.c  fossildelta.c  fuzzer.c  ieee754.c  memstat.c  memtrace.c  mmapwarm.c  nextchar.c  noop.c  normalize.c  pcachetrace.c  percentile.c  prefixes.c  qpvtab.c  randomjson.c  regexp.c  remember.c  rot13.c  series.c  sha1.c  (+22 more)
extensions/qrf/: README.md  qrf.c  qrf.h
extensions/rbu/: capdb_rbu.c  capdb_rbu.h  rbu.c  test_rbu.c
extensions/recover/: capdb_recover.c  capdb_recover.h  dbdata.c  test_recover.c
extensions/rtree/: README  capdbrtree.h  geopoly.c  rtree.c  rtree.h  test_rtreedoc.c  visual01.txt
extensions/session/: capdb_session.c  capdb_session.h  changeset.c  changesetfuzz.c  session_speed_test.c  test_session.c
extensions/wasm/: GNUmakefile  README-dist.txt  README.md  demo-123-worker.html  demo-123.html  demo-123.js  demo-jsstorage.html  demo-jsstorage.js  demo-worker1-promiser.c-pp.html  demo-worker1-promiser.c-pp.js  demo-worker1.html  demo-worker1.js  example_extra_init.c  index-dist.html  index.html  libcmpp.c  mkdist.sh  mkwasmbuilds.c  module-symbols.html  scratchpad-wasmfs.html  scratchpad-wasmfs.mjs  speedtest1-wasmfs.mjs  speedtest1-worker.html  speedtest1-worker.js  speedtest1.html  test-opfs-vfs.html  test-opfs-vfs.js  tester1-worker.c-pp.html  tester1.c-pp.html  tester1.c-pp.js
legacy/: Makefile.in  Makefile.linux-generic  Makefile.msc  tclcapdb-ex.c
legacy/autoconf/: Makefile.fallback  Makefile.in  Makefile.msc  README.txt
legacy/mptest/: mptest.c
man/: capdb-ctl.1  capdb-server.1  capdb.1
packaging/: capdb.pc.in
packaging/systemd/: capdb.service
scripts/: clean.sh  init-standalone-repo.sh  release.sh
tests/archive/: atrc.c  crashtest1.c  dbfuzz.c  dbfuzz2.c  dblwidth-a.sql  dotcmd01.sql  fork-test.c  fp-speed-1.c  fp-speed-2.c  fptest01.sql  fuzzcheck.c  fuzzinvariants.c  import01.sql  imposter1.sql  intck01.sql  kvtest.c  modeA.sql  optfuzz-db01.txt  (+25 more)
tools/: build-all-msvc.bat  build-shell.sh  capdb-ctl.c  capdb-install-smoke.sh  capdb-ops-smoke.sh  capdb-restore-drill.sh  capdb-server.c  capdb-test-depth-smoke.sh  check-api-surface.sh  check-release-artifacts.sh  genfkey.README  libvers.c  loadfts.c  mkautoconfamal.sh  mkkeywordhash.c  sqlite3_analyzer.c.in  sqlite3_rsync.c  srcck1.c  symbols-mingw.sh  symbols.sh  upstream-sync-check.sh  version-info.c  warnings-clang.sh  warnings.sh
(+156 files in other folders)
