[package]
name = "capdb-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["CapperOS Project"]
description = "Rust FFI bindings and safe wrapper for CapDB"

[lib]
name = "capdb_rs"
path = "src/lib.rs"

[[bin]]
name = "capdb-test"
path = "src/bin/test.rs"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libsqlite3-sys = "0.28"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
